Fix search positioning on mobile.

--- a/admin/themes/default/css/sass/base/_layout.scss
+++ b/admin/themes/default/css/sass/base/_layout.scss
@@ -141,7 +141,7 @@ hr {
 	@include screen-xs {
 		width: 100%;
 		padding-right: 0;
-		margin-top: 80px;
+		margin-top: (2 * $spacing-l);
 	}
 }
 
