--- a/admin/themes/default/css/sass/components/_search.scss
+++ b/admin/themes/default/css/sass/components/_search.scss
@@ -13,7 +13,7 @@
     	float: none;
 		width: 100%;
 		position: relative;
-		top: -50px;
+		top: $spacing-l;
 	}
     
     p {
